# aztec-flushrewards

./: .env.example  .gitignore  Cargo.toml  README.md  flush-abi.json  rollup-abi.json
src/: main.rs  main_v1_backup.rs
